@@ -3,7 +3,16 @@ inheritanceObserver
 
 A set of classes to examin the relationship between classes, and create a tree of all relationships (superclasses &amp; interfaces)
 
+
 Dependencies
 ============
 
 - Google Guava
+
+
+Runtime
+=======
+
+The  following JVM arguments might be useful for large codebases:
+
+ -Xmx1g -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=512m
